--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
-  # awards:
-  # summary:
+- degree: Bachelor of Arts, Philosophy
+  uni: UCLA
+  year: May, 2009
+  awards: Most Philosophical
+  summary: I think a lot
